--- a/frontend/assets/css/style-gift-list.css
+++ b/frontend/assets/css/style-gift-list.css
@@ -29,6 +29,18 @@ p {
     color: #A9A9A9; 
     text-decoration: line-through; 
 }
+
+dialog::backdrop{
+    background-color: rgb(0 0 0 /.5);
+}
+
+dialog {
+    border: none;
+    border-radius: .5rem;
+    box-shadow: 0 0 1em rgb(0, 0, 0/.3);
+    width: 80%;
+
+}
   
 
 /* li {
