--- a/frontend/assets/css/style-gift-list.css
+++ b/frontend/assets/css/style-gift-list.css
@@ -1,8 +1,19 @@
+@font-face {
+    font-family: 'LuxuriousScript';
+    src: url(../fonts/LuxuriousScript-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'Garet';
+    src: url(../fonts/Garet-Book.otf);
+}
+
 body {
     background-image: url(../images/back-lilas-4.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    font-family: 'Garet';
 }
 
 .cabecalho {
@@ -11,19 +22,25 @@ body {
     align-items: center;
 }
 
+.introducao {
+    width: 60%;
+    text-align: center;
+}
+
 .img {
     width: 250px;
 }
 
 h1 {
-    font-size: 45px;
+    font-size: 65px;
+    font-family: 'LuxuriousScript';
+    font-weight: 300;
+    position: relative;
+    top: -5px;
+    margin: 0px;
 }
 
-p {
-    font-size: 17px;
-    width: 600px;
-    text-align: center;
-}
+
 
 .selected-gift {
     color: #A9A9A9; 
@@ -34,21 +51,124 @@ dialog::backdrop{
     background-color: rgb(0 0 0 /.5);
 }
 
-dialog {
-    border: none;
-    border-radius: .5rem;
-    box-shadow: 0 0 1em rgb(0, 0, 0/.3);
-    width: 80%;
-
+dialog.gift-dialog {
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.582);
+    width: 500px;
+    backdrop-filter: blur(10px);
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    background-image: url(../images/details-flowers.png);
+    background-size: cover;
+  
 }
   
 
-/* li {
+.select {
+    margin: 8px 0;
+    width: 85px;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.35);
+    background:rgba(227, 192, 246, 0.1);
+    backdrop-filter: blur(4px);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.582);
     cursor: pointer;
-} */
+}
+
+.gift-input {
+    margin-bottom: 10px;
+    padding: 8px;
+    width: calc(100% - 16px);
+    box-sizing: border-box;
+}
+
+.confirm-button, .cancel-button {
+    padding: 5px 3px;
+    margin: 0 3px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.35);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.582);
+    backdrop-filter: blur(4px);
+    background:rgba(227, 192, 246, 0.1);
+}
+
+#gift-list {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.containerGifts {
+    margin: 15px auto;
+    width: 98%;
+    
+}
+
+ul {
+    width: 100%;
+}
+
+li {
+    width: 550px;
+    font-family: 'Garet';
+    margin: 10px 0;
+    padding: 5px 2px;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    backdrop-filter: blur(10px);
+    border: solid 1px rgba(0, 0, 0, 0.07);
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.325);
+    font-size: 14px;
+}
+
+.gift-image {
+    max-width: 70%;
+    height: auto;
+    margin-bottom: 18px; 
+    margin-top: 6px;
+    border-radius: 5px;
+}
+
+.gift-image2 {
+    max-width: 70%;
+    height: auto;
+    margin-bottom: 18px; 
+    margin-top: 2px;
+    border-radius: 5px;
+}
 
 @media screen and (min-width: 300px) and (max-width: 720px) {
     body {
         background-image: url(../images/back-lilas-3.png);
     }
+
+    h1 {
+        font-size: 45px;
+        top: -20px;
+    }
+
+    li {
+        width: 100%;
+    }
+
+    .introducao {
+        width: 90%;
+        font-size: 13px;
+    }
+
+    #gift-list {
+        grid-template-columns: 1fr;
+    }
+
+    dialog.gift-dialog {
+        width: 80%;
+    }
+
+    
 }
